update gradle to 9.0.0 + some patches from canvas